--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,22 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+h1 {
+    color:red;
+}
+
+.social-btn {
+    padding:1rem;
+    background:#0AC;
+    color:white;
+    border-radius:5px;
+    transition:ease 1s;
+}
+
+.social-btn:hover {
+    color:white;
+    background:#5AA;
+    text-decoration: none;
+    transition:ease 1s;
+}
