--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,1 @@
-<h1>All Posts</h1>
- 
- <% @posts.each do |post| %>
-   <p><%= link_to post.title, post_path(post.id) %></p>
- <% end %>
+<h1> Hello </h1>
