--- a/app/views/advertisements/new.html.erb
+++ b/app/views/advertisements/new.html.erb
@@ -1,2 +1,30 @@
-<h1>Advertisements#new</h1>
-<p>Find me in app/views/advertisements/new.html.erb</p>
+<h1> New Ad </h1>
+<div class="row">
+    <div class="col-md-4">
+        <p>Ad Rules</p>
+            <ul>
+                <li>No crappy products</li>
+                <li>No useless products</li>
+                <li>Only good products</li>
+            </ul>
+    </div>
+    <div class="col-md-8">
+        <%= form_for @advertisement do |f| %>
+        <div class="form-group">
+            <%= f.label :title %>
+            <%= f.text_area :title, class: 'form-control', placeholder: "Enter ad title" %>
+        </div>
+        <div class="form-group">
+            <%= f.label :copy %>
+            <%= f.text_area :copy, rows:8, class: 'form-control', placeholder: 'Describe your product' %>
+        </div>
+        <div class="form-group">
+            <%= f.label :price %>
+            <%= f.text_area :price, class: 'form-control', placeholder: 'How much is your product?'%>
+        </div>
+        <div class="form-group">
+            <%= f.submit "Save", class: 'btn btn-success' %>
+        </div>
+        <% end %>
+        </div>
+    </div>
