--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,7 +4,7 @@
         <p><%= @post.body %>
     </div>
     <div class="col-md-4">
-        <%= link_to 'Edit', edit_post_path(@post), class: 'btn btn-success'%>
-        <%= link_to 'Delete Post', @post, method: :delete, class: 'btn btn-success'%>
+        <%= link_to 'Edit', edit_topic_post_path(@post), class: 'btn btn-success'%>
+        <%= link_to 'Delete Post', [@post.topic, @post], method: :delete, class: 'btn btn-success'%>
     </div>
 </div>
