--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -8,7 +8,7 @@
     <div class="row">
         <div class="col-md-4">
             <h2>Solves world hunger</h2>
-            <p>Bloccit will deliver food and water to those in nedd, all over the world</p>
+            <p>Bloccit will deliver food and water to those in need, all over the world</p>
         </div>
         <div class="col-md-4">
             <h2>Eliminates poverty</h2>
