Addition of gravatar

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,4 +16,8 @@
 
 
  @import "bootstrap-sprockets";
- @import "bootstrap"
+ @import "bootstrap";
+
+ .gravatar-id {
+     margin: 5px 5px 5px 0;
+ }
