--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,8 +8,10 @@
     <div class="col-md-8">
         <p><%= @post.body %>
     </div>
+    <% if user_is_authorized_for_post?(@post) %>
     <div class="col-md-4">
         <%= link_to 'Edit', edit_topic_post_path(@post), class: 'btn btn-success'%>
         <%= link_to 'Delete Post', [@post.topic, @post], method: :delete, class: 'btn btn-success'%>
     </div>
+    <% end %>
 </div>
