--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,8 +1,5 @@
 <h1>
-    <%= @post.title %>
-    <small>
-        submitted <%= time_ago_in_words(@post.created_at) %> ago by <%= @post.user.name %>
-    </small>    
+    <%= render @post %> 
 </h1>
 <div class="row">
     <div class="col-md-8">
