Addition of voting for users

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,4 +1,11 @@
-<%= @post.title %>
-    <small>
-        submitted <%= time_ago_in_words(@post.created_at) %> ago by <%= @post.user.name %>
-    </small>   
+<div>
+    <h3>
+        <%= render partial: 'votes/voting', locals: { post: @post } %>
+    </h3>
+   <h1>
+     <%= @post.title %> <br>
+     <small>
+       submitted <%= time_ago_in_words(@post.created_at) %> ago by <%= @post.user.name %>
+     </small>
+   </h1>
+ </div>
