--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -8,4 +8,15 @@
        submitted <%= time_ago_in_words(@post.created_at) %> ago by <%= @post.user.name %>
      </small>
    </h1>
+   <div class="col-md-8">
+        <p><%= @post.body %>
+        <div>
+            <h3>Comments</h3>
+            <%= render @post.comments %>
+        </div>
+
+        <% if current_user %>
+            <%= render 'comments/form', comment: Comment.new, post: @post %>
+        <% end %>
+    </div>
  </div>
