Issue with rendering favorites

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -35,4 +35,4 @@
     <%= @user.name %> has not submitted any comments yet
 <% end %>
 
-<!-- missing favorites render >
+<%= render @user.favorites %>
